--- a/index.html
+++ b/index.html
@@ -52,14 +52,22 @@
         </div> <!-- Sub-Header -->
 
         <div class="icons-body">
-          <div class="icon"><img src="./icons/shield.svg" alt=""></div>
-          <div class="icon"><img src="./icons/instagram.svg" alt=""></div>
-          <div class="icon"><img src="./icons/netscape.svg" alt=""></div>
-          <div class="icon"><img src="./icons/photos.svg" alt=""></div>
-          <div class="icon"><img src="./icons/music-player.svg" alt=""></div>
-          <div class="icon"><img src="./icons/calendar.svg" alt=""></div>
-          <div class="icon"><img src="./icons/drive.svg" alt=""></div>
-          <div class="icon"><img src="./icons/settings.svg" alt=""></div>
+          <div class="icon"><img src="./icons/shield.svg" alt="">
+            <span>Security</span></div>
+          <div class="icon"><img src="./icons/instagram.svg" alt="">
+            <span>Insgram</span></div>
+          <div class="icon"><img src="./icons/netscape.svg" alt="">
+            <span>Netscape</span></div>
+          <div class="icon"><img src="./icons/photos.svg" alt="">
+            <span>Photos</span></div>
+          <div class="icon"><img src="./icons/music-player.svg" alt="">
+            <span>Music</span></div>
+          <div class="icon"><img src="./icons/calendar.svg" alt="">
+            <span>Calendar</span></div>
+          <div class="icon"><img src="./icons/drive.svg" alt="">
+            <span>Drive</span></div>
+          <div class="icon"><img src="./icons/settings.svg" alt="">
+            <span>Settings</span></div>
 
         </div><!-- Icons -->
 
